# kicad-skip

./: README.md  pyproject.toml
.claude/skills/kicad-skip/: SKILL.md
.claude/skills/kicad-skip/references/: api-reference.md
.claude/skills/kicad-skip/scripts/: skip_tool.py
src/skip/: __init__.py  at_location.py  collection.py  element_template.py
src/skip/eeschema/: lib_symbol.py
src/skip/eeschema/schematic/: symbol.py
src/skip/pcbnew/: footprint.py
src/skip/property/: property.py
tests/: conftest.py  test_kicad_validates.py  test_load_warnings.py  test_mutate.py  test_pin_locations.py  test_roundtrip.py
tests/fixtures/: led_array_v10.kicad_sch  minimal_v10.kicad_pcb
tools/: sync-skill.sh
