[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kicad-skip"
version = "0.3.0"
authors = [
  { name="Pat Deegan" },
]
description = "A friendly way to skip the drudgery and manipulate KiCad 7/8/9/10 s-expression schematic, netlist and PCB files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
]
dependencies = [
    'sexpdata >= 0.0.3',
]

[project.urls]
Homepage = "https://github.com/psychogenic/kicad-skip"
Issues = "https://github.com/psychogenic/kicad-skip/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
